Bug 458587 - KRDC access dates have been set back to 1970 - every bookmark shows last access "52 years ago"
Summary: KRDC access dates have been set back to 1970 - every bookmark shows last acce...
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
: 458860 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-09-01 01:38 UTC by piedro
Modified: 2022-09-08 09:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description piedro 2022-09-01 01:38:35 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. open krdc
2. look at the column for "last access" 
3. every row show "52 years ago" !  

OBSERVED RESULT
Obviously every access date has been reset to 1.1.1970 with one of the last updates 

EXPECTED RESULT
The last access should be accurate as it has been before and show relative dates like "2 days ago", "20 minutes ago" and so forth... 

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Arch fully updated (5.19.5) 
(available in About System)
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5

ADDITIONAL INFORMATION
This is a regression as it has been fine before... please note that this does not match bug 
https://bugs.kde.org/show_bug.cgi?id=419632 
THis bug here is about every recent dates.
Comment 1 Bug Janitor Service 2022-09-01 16:50:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/krdc/-/merge_requests/42
Comment 2 Gabriel Souza Franco 2022-09-02 20:16:06 UTC
Git commit 0ba2a5b7eb54382ecede363ed46ef979635705f5 by Gabriel Souza Franco.
Committed on 01/09/2022 at 16:46.
Pushed by aacid into branch 'master'.

Fix access dates display

It is stored in seconds, not milliseconds

M  +2    -2    remotedesktopsmodel.cpp

https://invent.kde.org/network/krdc/commit/0ba2a5b7eb54382ecede363ed46ef979635705f5
Comment 3 Albert Astals Cid 2022-09-02 20:17:18 UTC
Git commit f4824d49759ba1cf1711e432ea4fe42a7359d380 by Albert Astals Cid, on behalf of Gabriel Souza Franco.
Committed on 02/09/2022 at 20:16.
Pushed by aacid into branch 'release/22.08'.

Fix access dates display

It is stored in seconds, not milliseconds
(cherry picked from commit 0ba2a5b7eb54382ecede363ed46ef979635705f5)

M  +2    -2    remotedesktopsmodel.cpp

https://invent.kde.org/network/krdc/commit/f4824d49759ba1cf1711e432ea4fe42a7359d380
Comment 4 Albert Astals Cid 2022-09-08 09:49:48 UTC
*** Bug 458860 has been marked as a duplicate of this bug. ***