Fix access dates display

It is stored in seconds, not milliseconds

BUG: 458587